# eos-sdk

./: .bashrc  .gitignore  .gitmodules  .jhbuildrc  .travis.yml  Makefile.am  README.md  Vagrantfile  autogen.sh  configure.ac  desktop-layout.json  endless-0.pc.in  eos-sdk.modules  install_eos.sh  jasmine.json  meson.build  meson_options.txt  provision_home.sh  provision_root.sh  vpnc.conf
.tx/: config
ansible/: README.md  hosts  install.sh  setup_dev_machine.sh
data/: eos-sdk.gresource.xml  eos-wikipedia-domain.gresource.xml
debian/: .gitignore  changelog  control  copyright  eos-sdk-0-bin.install  eos-sdk-0-dev.install  eos-sdk-0-doc.install  eos-sdk-0-webhelper.install  eos-sdk.install  (+18 more)
endless/: Makefile.am  apiversion.h  application.c  application.h  endless.h  eosactionbutton-private.h  eosactionbutton.c  eosactionbutton.h  eosactionmenu-private.h  eosactionmenu.c  eosapiversion-private.h  eosapiversion.h  eosapplication.c  eosapplication.h  eosattribution-private.h  eosattribution.c  eoscellrendererpixbuflink-private.h  eoscellrendererpixbuflink.c  eoscellrenderertextlink-private.h  eoscellrenderertextlink.c  eoscustomcontainer.c  eoscustomcontainer.h  eosenums.h  eosflexygrid-private.h  eosflexygrid.c  eosflexygrid.h  eosflexygridcell.c  eoshello.c  eosinit-private.h  eosinit.c  eoslicense-private.h  eoslicense.c  eoslicense.h  eosmacros.h  eosmainarea-private.h  eosmainarea.c  eosmainarea.h  eosobjectpreviewerutils.c  eosobjectpreviewerutils.h  eospagemanager-private.h  (+23 more)
endless/gvdb/: gvdb-builder.c  gvdb-builder.h  gvdb-format.h  gvdb-reader.c  gvdb-reader.h
licenses/creativecommons/: meson.build
licenses/creativecommons/C/: CC-BY-2.0.html  CC-BY-3.0.html  CC-BY-4.0.html  CC-BY-NC-2.0.html  CC-BY-NC-3.0.html  CC-BY-NC-SA-2.0.html  CC-BY-ND-2.0.html  CC-BY-ND-3.0.html  CC-BY-SA-2.0.html  CC-BY-SA-2.5.html  CC-BY-SA-3.0.html  CC-BY-SA-4.0.html
licenses/creativecommons/ar/: CC-BY-2.0.html  CC-BY-3.0.html  CC-BY-4.0.html  CC-BY-NC-2.0.html  CC-BY-NC-3.0.html  CC-BY-NC-SA-2.0.html  CC-BY-ND-2.0.html  CC-BY-ND-3.0.html  CC-BY-SA-2.0.html  CC-BY-SA-2.5.html  CC-BY-SA-3.0.html  CC-BY-SA-4.0.html
licenses/creativecommons/es/: CC-BY-2.0.html  CC-BY-3.0.html  CC-BY-4.0.html  CC-BY-NC-2.0.html  CC-BY-NC-3.0.html  CC-BY-NC-SA-2.0.html  CC-BY-ND-2.0.html  CC-BY-ND-3.0.html  CC-BY-SA-2.0.html  CC-BY-SA-2.5.html  CC-BY-SA-3.0.html  CC-BY-SA-4.0.html
licenses/creativecommons/fr/: CC-BY-2.0.html  CC-BY-3.0.html  CC-BY-4.0.html  CC-BY-NC-2.0.html  CC-BY-NC-3.0.html  CC-BY-NC-SA-2.0.html  CC-BY-ND-2.0.html  CC-BY-ND-3.0.html  CC-BY-SA-2.0.html  CC-BY-SA-2.5.html  CC-BY-SA-3.0.html  CC-BY-SA-4.0.html
licenses/creativecommons/includes/: deed3-print.css  jurisdictions.css
licenses/creativecommons/legalcode/: CC-BY-2.0-legalcode.html  CC-BY-3.0-legalcode.html  CC-BY-4.0-legalcode.html  CC-BY-NC-2.0-legalcode.html  CC-BY-NC-3.0-legalcode.html  CC-BY-NC-SA-2.0-legalcode.html  CC-BY-ND-2.0-legalcode.html  CC-BY-ND-3.0-legalcode.html  CC-BY-SA-2.0-legalcode.html  CC-BY-SA-2.5-legalcode.html  CC-BY-SA-3.0-legalcode.html  CC-BY-SA-4.0-legalcode.html
licenses/creativecommons/pt_BR/: CC-BY-2.0.html  CC-BY-3.0.html  CC-BY-4.0.html  CC-BY-NC-2.0.html  CC-BY-NC-3.0.html  CC-BY-NC-SA-2.0.html  CC-BY-ND-2.0.html  CC-BY-ND-3.0.html  CC-BY-SA-2.0.html  CC-BY-SA-2.5.html  CC-BY-SA-3.0.html  CC-BY-SA-4.0.html
licenses/gnu/: meson.build
licenses/gnu/C/: FDL-1.1.html  FDL-1.2.html  FDL-1.3.html
licenses/gnu/css/: layout.min.css  print.min.css
licenses/images/deed/: meson.build
licenses/includes/: deed3.css  meson.build
licenses/includes/yahooapis/2.6.0/: meson.build
licenses/publicdomain/: meson.build
licenses/publicdomain/C/: CC0-1.0.html
licenses/publicdomain/ar/: CC0-1.0.html
licenses/publicdomain/es/: CC0-1.0.html
licenses/publicdomain/fr/: CC0-1.0.html
licenses/publicdomain/legalcode/: CC0-1.0-legalcode.html
licenses/publicdomain/pt_BR/: CC0-1.0.html
overrides/: Endless.js  Makefile.am.inc  meson.build
overrides/endless_private/: asset_button.js  connection_test.js  injectable_webview.js  search_box.js  topbar_home_button.js  topbar_nav_button.js
test/: Makefile.am  Makefile.am.inc  flexy-grid.c  gtester-mock-event-recorder.sh  run-tests.c  run-tests.h  run-with-dbus  tap-test.sh  test-action-button.c  test-action-menu.c  test-application.c  test-hello.c  test-init.c  test-page-manager.c  test-splash-page-manager.c  test-window.c  utils.js  wait-for-service-helper.py
test/demos/: Makefile.am
test/endless/: Makefile.am.inc  run-tests.c  run-tests.h  test-action-button.c  test-action-menu.c  test-application.c  test-custom-container.c  test-flexy-grid.c  test-hello.c  test-init.c  test-page-manager.c  test-profile.c  test-splash-page-manager.c  test-window.c  testCustomContainer.js  testSearchBox.js  testTopbarHomeButton.js  testTopbarNavButton.js
test/smoke-tests/: Makefile.am.inc  action-buttons.js  app-window.js  back-forward.js  credits.js  custom-container.js  eosactionbutton.css  hello.c  horizontallayout.css  horizontallayout.js  introspection.js  introspection.py  large-content.js  main-area.js  object-previewer-lightbox.css  object-previewer-lightbox.js  object-previewer-test.js  splash-page.js  webview.js
test/smoke-tests/frame-rate-tests/: README  clutter.js  gtk.css  gtk.js
test/smoke-tests/images/: attribution.json  credits.gresource.xml
test/smoke-tests/webhelper/: webview.js  webview2.js
test/smoke-tests/webview/: first_page.html
test/tools/: test.html  testHtmlExtractor.js
test/tools/eos-application-manifest/: testInit.js
test/tools/eos-run-test/: sanitycheck.js
test/webhelper/: testLocal.js  testTranslate.js  testTranslate2.js  testTranslate2Old.js  testUpdateFontSize.js  testWebActions.js  testWebActions2.js  testWebActions2Old.js
test/webhelper/smoke-tests/: webview.js
test/webhelper_tests/: testTranslate.js  testWebActions.js
test/wikipedia/models/: testArticleModel.js  testCategoryModel.js  testDomainWikiModel.js
test/wikipedia_tests/models/: testArticleModel.js  testCategoryModel.js  testDomainWikiModel.js
(+331 files in other folders)
