gjs_overrides_dir = join_paths(datadir, 'gjs-1.0', 'overrides')

install_data([
  'endless_private/asset_button.js',
  'endless_private/search_box.js',
  'endless_private/topbar_home_button.js',
  'endless_private/topbar_nav_button.js',
],
  install_dir: join_paths(gjs_overrides_dir, 'endless_private'),
)

install_data([
  'Endless.js',
],
  install_dir: gjs_overrides_dir,
)
