license_files = files([
  'C/FDL-1.1.html',
  'C/FDL-1.2.html',
  'C/FDL-1.3.html',
])

install_data(license_files, install_dir: join_paths(datadir, 'licenses', 'gnu', 'C'))

css_files = files([
  'css/combo.css',
  'css/layout.min.css',
  'css/mini.css',
  'css/print.min.css',
])

install_data(css_files, install_dir: join_paths(datadir, 'licenses', 'gnu', 'css'))

image_files = files([
  'images/dogear.png',
  'images/fsf-logo-notext.png',
  'images/heckert_gnu.small.png',
  'images/topbanner.png',
])

install_data(image_files, install_dir: join_paths(datadir, 'licenses', 'gnu', 'images'))
