included_files = [
  'deed3.css',
  'deed3-ie.css',
  'deed3-print.css',
  'deed3-rtl.css',
  'deed.js',
  'deeds.css',
  'errata.js',
  'help.js',
  'jurisdictions.css',
  'popup.css',
  'total.css',
  'zero.css',
]

install_data(included_files, install_dir: join_paths(datadir, 'licenses', 'includes'))

subdir('yahooapis/2.6.0')
